<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Show_UI">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="0dp"
            android:text="내 정보"
            android:id="@+id/info"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">



            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/main_title"
                android:textSize="45sp"
                android:translationX="50dp" />
        </LinearLayout>

<!--      LinearLayout 쓰실 때 weightSum을 잘 활용하시면 좋습니다.          -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
            <ImageButton
                android:id="@+id/closet"
                android:layout_width="wrap_content"
                android:layout_height="103dp"
                android:background="@null"
                android:layout_gravity="center"
                app:srcCompat="@drawable/closet" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/closet"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/laundry"
                    android:layout_width="wrap_content"
                    android:layout_height="102dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    app:srcCompat="@drawable/laundrybin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/laundry_bin"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:weightSum="2"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/post"
                    android:layout_width="wrap_content"
                    android:layout_height="103dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    app:srcCompat="@drawable/post" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/bulletin"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="102dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    app:srcCompat="@drawable/user" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/member_info"/>
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/logot_button"
            android:text="로그아웃"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:text="회원탈퇴 합니다."
            android:id="@+id/delete_textview"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>